# parlanchina

./: .env.example  .gitignore  AGENTS.md  README.md  banner.md  mcp.json  pyproject.toml  run_parlanchina_desktop.ps1  run_parlanchina_desktop.py  run_parlanchina_desktop.sh  run_parlanchina_web.ps1  run_parlanchina_web.sh
config/: settings.example.json
config-examples/: .env.example  mcp.example.json  settings.example.yaml
design/: code.html
doc/: functional-doc.md  technical-doc.md  technicl-doc.md
images/: parlanchina-logo-no-text-no-bg.xcf  parlanchina-logo-no-text.xcf  parlanchina-logo-small.xcf  parlanchina-logo.xcf  parlanchina-ui.xcf  toolbox.xcf
parlanchina/: __init__.py  __main__.py  app.py  config.py  mcp_routes.py  paths.py  routes.py
parlanchina/services/: ai_client.py  chat_store.py  image_store.py  internal_tools.py  llm.py  mcp_manager.py
parlanchina/static/js/: about.js  mcp.js  mermaid-zoom.js  stream.js  theme.js
parlanchina/templates/: base.html  chat.html
parlanchina/utils/: banner.py  config_view.py  markdown.py
prompts/: 2025-11-26-01-AGENTS.md  2025-11-27-01-AGENTS.md  2025-11-29-01.AGENTS.md  2025-11-29-02-AGENTS.md  2025-11-30-02.AGENTS.md  2025-11-30-30-AGENTS.md
scripts/: trace_mcp_toolcall.py
